<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="aaramshop_dashbaord">Dashboard</string>
    <string name="full_name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="aaramonweb">Aaramon Web</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="account_setting">Account Setting</string>
    <string name="preference">Preferences</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="show_customer">My Customers</string>
    <string name="inventory">Inventory</string>
    <string name="bulk">Bulk</string>
    <string name="marketing">Marketing</string>
    <string name="payments">Payments</string>
    <string name="faq">FAQs</string>
    <string name="apptour">App Tour</string>
    <string name="language_setting">Change Language</string>
    <string name="lang_dialog_message">Choose a Language</string>
    <string name="email_id">Email Id</string>
    <string name="store_name">Store Name</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="offer">Offers</string>
    <string name="wallet">Wallet</string>
    <string name="report">Reports</string>
    <string name="pending_order">Pending Orders</string>
    <string name="recent_order">Recent Orders</string>
    <string name="summary">Summary of the day</string>
    <string name="promote">Promote My Store</string>
    <string name="total_orders_received">Total orders received</string>
    <string name="total_sales_amount">Total sales amount</string>
    <string name="total_new_customers">Total new customers</string>
    <string name="total_loyalty_points">Total loyalty points</string>
    <string name="order">Orders</string>
    <string name="orders_amount">Orders Amount</string>
    <string name="new_customers">New Customers</string>
    <string name="loyalty_points">Loyalty Points</string>
    <string name="my_customer">My Customers</string>
    <string name="my_contact">My Contacts</string>
    <string name="search_customer">Search Customers</string>
    <string name="search_locality">Search Locality</string>
    <string name="search_groups">Search Groups</string>
    <string name="nogroupsavailable">No Groups Available</string>
    <string name="invite">Invite</string>
    <string name="sent">Sent</string>
    <string name="chat_support">Support</string>
    <string name="chat_recent">Recent</string>
    <string name="chat_customer">Customers</string>
    <string name="blank_chat">Your Customers are waiting to hear from you.Select a Contact and Start Chatting.</string>
    <string name="money_earned">Money Earned</string>
    <string name="aarammoney">AaramMoney</string>
    <string name="customer_dues">Customer Dues</string>
    <string name="customer_balance">Customer Balance</string>
    <string name="payment_done">Payment Done</string>
    <string name="outstanding">Outstanding</string>
    <string name="due_money">Due Money</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="redeem_coupon">Redeem Coupon</string>
    <string name="my_offer">My Offers</string>
    <string name="coupon">My Coupons</string>
    <string name="create_offer">Create Offer</string>
    <string name="create_coupon_btn">Create Coupon</string>
    <string name="blank_offer">Hey,No Offer Available Why Not Create A New Offer!</string>
    <string name="blank_groupoffer">Hey, No Offer Available in this group, Why Not Create A New Offer!</string>
    <string name="blank_coupon">Hey, No Coupons Available Why Not Create A Coupon!</string>
    <string name="done">Done</string>
    <string name="notification">Notification</string>
    <string name="deliverystatus">Delivery Status</string>
    <string name="chatprefence">Chat</string>
    <string name="storetiming">Store Timings</string>
    <string name="daysoff">Days Off</string>
    <string name="deliverydetail">Delivery Details</string>
    <string name="homedelivery">Home Delivery</string>
    <string name="deliveryrange">Delivery Range</string>
    <string name="Localitytodeliver">Locality To Delivery</string>
    <string name="miniordervalue">Mini Order Value</string>
    <string name="acceptedpaymentmode">Accepted Payment Mode</string>
    <string name="bussinessdetail">Business Details</string>
    <string name="selecttime">Select Time </string>
    <string name="imageuploaderror">Something went wrong!, please try selecting another file</string>
    <string name="yourbankno">Your Bank Account No.</string>
    <string name="bankname">Bank Name</string>
    <string name="branch">Branch</string>
    <string name="ifsccode">IFSC Code</string>
    <string name="accounttitle">Account Title</string>
    <string name="uploadpan">Upload PAN Card</string>
    <string name="uploadid">Upload ID Proof</string>
    <string name="uploadaddress">Upload Address Proof</string>
    <string name="uploadcheque">Upload Cancelled Cheque</string>
    <string name="skip">Skip</string>
    <string name="termscondition">Please accept Terms And Conditions</string>
    <string name="selectpaymentmode">Please select a payment mode</string>
    <string name="information">Information</string>
    <string name="paymentmodeinformation">Please select the Payment modes which you accept for customer orders. Also please review the associated fee with the selected mode.</string>
    <string name="agreetermscondition">I agree with terms and conditions.</string>
    <string name="bussinessdetailinfo">This information is required to process and transfer your payments easily and quickly. Any money earned, either for online payment orders or any Brand related activities will be transferred to your account details filled here.</string>
    <string name="monday">Every Monday</string>
    <string name="tuesday">Every Tuesday</string>
    <string name="wednesday">Every Wednesday</string>
    <string name="thursday">Every Thursday</string>
    <string name="friday">Every Friday</string>
    <string name="saturday">Every Saturday</string>
    <string name="sunday">Every Sunday</string>
    <string name="addlocality">Add Locality</string>
    <string name="blankaddlocality">Please enter text</string>
    <string name="ordervaluetype">Please Select Order Value Type</string>
    <string name="selecttype">Select Type</string>
    <string name="globalminivalue">Global Mini Order Value</string>
    <string name="localityordervalue">Locality Wise Order Value</string>
    <string name="managedeliveryboy">Manage Delivery Boy</string>
    <string name="locatedeliveryboy">Locate Delivery Boy</string>
    <string name="deliveryboywallet">Delivery Boy Wallet</string>
    <string name="deliveryboysettlement">Delivery Boy Settlement</string>
    <string name="dues">Dues</string>
    <string name="nodeliveryboyavailable">No Delivery Boy Available</string>
    <string name="selectfromdate">Please Select From Date</string>
    <string name="selecttodate">Please Select To Date</string>
    <string name="selectbothdate">Please Select Both the Dates</string>
    <string name="lessthandate">From Date should be Less than To Date</string>
    <string name="openclosetimecheck">Open Time should be Less than Close Time</string>
    <string name="requiredfield">Please fill the required fields !</string>
    <string name="adddeliveryboy">Add Delivery Boy</string>
    <string name="deliveryname">Name</string>
    <string name="enterdeliveryname">Enter Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="enterphonenumber">Enter Phone Number</string>
    <string name="deliveryboywalletdetail">Get Delivery Boy Wallet Details</string>
    <string name="selectall">Select All</string>
    <string name="unselectall">Unselect All</string>
    <string name="deliveryboysettlementdetail">Delivery Boy Settlement Details</string>
    <string name="nodues">No Dues To be Settled</string>
    <string name="deliveryboycurrentlocation">Delivery Boy Track Location</string>
    <string name="deleteconfirm">Are you sure,you want to delete</string>
    <string name="entersomevalue">Please enter some value</string>
    <string name="customers">Customers</string>
    <string name="groupoffer">Groups Offers</string>
    <string name="groupofferdetail">Groups Offers Detail</string>
    <string name="nocustomeravailabe">Hey, No Customers Available!</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="totalorder">Total Orders</string>
    <string name="totalbonuspoint">Total Bonus Point</string>
    <string name="totalaaramrewardpoint">Total Aaram Rewards Point</string>
    <string name="groupname">Group Name</string>
    <string name="createnewgroup">Create New Groups</string>
    <string name="entergroupname">Enter Group Name</string>
    <string name="editcreditlimit">Edit Credit Limit</string>
    <string name="entercreditlimit">Please Enter Credit Limit</string>
    <string name="mappinpaddevice">Map Pinpad Device</string>
    <string name="jiomoneycode">JioMoney Code</string>
    <string name="jiomoneydebitcredit">JioMoney Debit/Credit</string>
    <string name="transactionhistory">Transaction History</string>
    <string name="enteramount">Please Enter Amount</string>
    <string name="checkamount">Please Check Amount</string>
    <string name="paymentsuccess">Payment Transfer Succesfully</string>
    <string name="paymentcancel">Transaction has been cancelled by the Customer. Please initiate it again.</string>
    <string name="carderror">Card Error</string>
    <string name="jiomoneyerror">We are unable to establish connection with server.Please try again after sometime</string>
    <string name="entermobile">Please Enter Mobile</string>
    <string name="invalidemail">Invalid Email ID</string>
    <string name="notificationsentsucces">Notification Sent Successfully</string>
    <string name="tryagain">Please Try Again</string>
    <string name="enteramountswipecard">Enter Amount &amp; Swipe Card</string>
    <string name="enteramounthead">Enter Amount</string>
    <string name="capturepayment">Capture Payment</string>
    <string name="sendrefund">Send Refund</string>
    <string name="selecttheaction">Select The Action</string>
    <string name="sendnotification">Send Notification</string>
    <string name="refundamount">Refund Amount</string>
    <string name="notransaction">Hey,No Transaction History to available</string>
    <string name="enterrefundamount">Enter Refund Amount</string>
    <string name="send">SEND</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseenterbarcode">Please Enter Barcode</string>
    <string name="invalidcodeamount">Invalid code/amount entered. Please recheck</string>
    <string name="invalidtoken">Invalid Token And Please Contact To AaramShop.</string>
    <string name="sentnotification">Sent </string>
    <string name="deviceswitchoff">Device Is Switched Off</string>
    <string name="dongleidnot">Dongle ID Not Found</string>
    <string name="devicesuccess">Congrats, your device is successfully mapped and Ready to Use.</string>
    <string name="devicealready">This device is already mapped and Ready to Use.</string>
    <string name="dongleserialno">Dongle Serial Number</string>
    <string name="mapdevice">Map Device</string>
    <string name="scanenterbarcode">Please Scan/enter Barcode</string>
    <string name="scannentercode">Scan/Enter Code</string>
    <string name="getpayment">Get Payment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="purchasesuppliers">Purchase &amp; Suppliers</string>
    <string name="suppliernamenumber">Supplier Name/Number</string>
    <string name="addnew">Add New</string>
    <string name="frequentsupplier">Frequent Suppliers</string>
</resources>