<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <EditText
        android:id="@+id/ad_mapdevice_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/brand_redemption_scheme_mobile_no_box"
        android:hint="@string/dongleserialno"
        android:inputType="text"
        android:maxLength="50"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="#000000">

        <requestFocus></requestFocus>
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/ad_mapdevice_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_proceed"
            android:text="@string/mapdevice"
            android:textColor="@color/white"></Button>

        <Button
            android:id="@+id/ad_mapdevice_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_proceed"
            android:text="@string/cancel"
            android:textColor="@color/white"></Button>
    </LinearLayout>
</LinearLayout>