<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_applogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/splash_logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_applogo"
        android:layout_marginTop="60dp"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="5dp"
            android:theme="@style/TextLabel"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_hint_color"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line"
            android:layout_marginTop="5dp"
            android:theme="@style/TextLabel"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_hint_color"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_proceed"
            android:elevation="2dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>